[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smacv2"
version = "1.0.0"
description = """SMACv2 - StarCraft Multi-Agent Challenge

SMACv2 is an update to Whirl's Starcraft Multi-Agent Challenge, 
which is a benchmark for research in the field of cooperative 
multi-agent reinforcement learning. SMAC and SMACv2 both focus 
on decentralised micromanagement scenarios in StarCraft II, 
rather than the full game.

The accompanying paper which outlines the motivation for using SMAC as well as
results using the state-of-the-art deep multi-agent reinforcement learning
algorithms can be found at https://www.arxiv.link

Read the README at https://github.com/oxwhirl/smacv2 for more information."""
readme = "README.md"
authors = [{ name = "WhiRL", email = "benellis@robots.ox.ac.uk" }]
license = { text = "MIT License" }
keywords = ["StarCraft", "Multi-Agent Reinforcement Learning"]
urls = { homepage = "https://github.com/oxwhirl/smacv2" }
dependencies = [
  "pysc2>=3.0.0",
  "protobuf<3.21",
  "s2clientprotocol>=4.10.1.75800.0",
  "absl-py>=0.1.0",
  "numpy>=1.10",
  "pygame>=2.0.0",
]

[project.scripts]
map-list = "smacv2:map_list"

[project.optional-dependencies]
dev = [
  "pre-commit>=2.0.1",
  "black>=19.10b0",
  "flake8>=3.7",
  "flake8-bugbear>=20.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smacv2_examples = ["**/*.yaml", "**/*.rst", "**/*.pkl"]
smacv2 = ["**/*.SC2Map"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
